# typed-id-rs

./: Cargo.toml  README.md
src/: lib.rs  serde.rs
tests/: tests.rs
