[package]
name = "typed-id"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[lints.rust]
future-incompatible = "deny"
keyword-idents = "deny"
nonstandard-style = "deny"
